<resources>
    <string name="app_name">MyCompleteApplication</string>
    <string name="stroke_quiz">stroke_quiz</string>
    <string name="subheading">Please, answer the questions</string>
    <string name="question1">What is your Gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="question2">Enter your Age:</string>
    <string name="age">age</string>
    <string name="question3">Are you sick with Hypertension?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question4">Are you sick with Heart_diseases?</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>
    <string name="question5">Are you Ever_married?</string>
    <string name="yes2">Yes</string>
    <string name="no2">No</string>
    <string name="question6">What is your Work_type?</string>
    <string name="q6option1">Private</string>
    <string name="q6option2">Self-employed</string>
    <string name="q6option3">Govt_job</string>
    <string name="q6option4">children</string>
    <string name="q6option5">Never_worked</string>
    <string name="question7">What is your Residence_type?</string>
    <string name="urban">Urban</string>
    <string name="rural">Rural</string>
    <string name="question8">Enter your Avg_glucose_level:</string>
    <string name="Avg_glucose_level">avg_glucose_level</string>
    <string name="question9">Enter your Bmi:</string>
    <string name="bmi">bmi</string>
    <string name="question10">What is your Smoking_status?</string>
    <string name="q10option1">formerly smoked</string>
    <string name="q10option2">never smoked</string>
    <string name="q10option3">smokes</string>
    <string name="finish_quiz">Please click on button After finishing quiz</string>
    <string name="result_answers">Show result</string>
</resources>
